--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
   ################### DataSource Configuration ##########################  
-spring.datasource.url=jdbc:postgresql://gmdvportallrec2.lyon-dev2.local:5432/cmdecarte_db
+spring.datasource.url=jdbc:postgresql://gmdvcmdcartdev1.lyon-dev2.local:5432/cmdecarte_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=cmdecarte
 spring.datasource.password=UGzP6uCZm7di8%
@@ -9,8 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 ################### Flyway Configuration ##########################
-flyway.schemas='cmdecarte'
-flyway.url=jdbc:postgresql://gmdvportallrec2.lyon-dev2.local:5432/cmdecarte_db
+#flyway.baselineOnMigrate=true
+#flyway.schemas='cmdecarte'
+#flyway.url=jdbc:postgresql://gmdvcmdcartdev1.lyon-dev2.local:5432/cmdecarte_db
 
 
 
