Setting up Itext for PDF generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 ################### Flyway Configuration ##########################
+#flyway.baselineOnMigrate=
 #flyway.baselineOnMigrate=true
 #flyway.schemas='cmdecarte'
 #flyway.url=jdbc:postgresql://gmdvcmdcartdev1.lyon-dev2.local:5432/cmdecarte_db
