- bdd and pdf package refactor - Setting up the pdf generation

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<version>3.0.1</version>
 			<type>pom</type>
 		</dependency>
+		<!-- Spring Web-->
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-web</artifactId>
+    <version>3.0.3</version>
+</dependency>
 		<!-- database -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,13 +34,13 @@
 			<version>42.5.1</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- 
+		
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<version>9.11.0</version>
 		</dependency>
-		-->
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -47,12 +53,14 @@
 			<version>3.0.1</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
 			<version>1.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -65,6 +73,7 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
@@ -76,24 +85,28 @@
 			<artifactId>jaxb-xjc</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
 			<version>2.3.2</version>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<!-- management of persistence and object/relational mapping in Java-->
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
 		<!-- enables distributed transactions-->
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>javax.transaction-api</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
@@ -106,16 +119,11 @@
 			<version>1.18.24</version>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
     <version>2.0.6</version>
-</dependency>
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-jdk14</artifactId>
-    <version>2.0.6</version>
-    <scope>test</scope>
 </dependency>
 			<!-- PDF-->
 	<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
@@ -132,6 +140,11 @@
 <dependency>
     <groupId>com.itextpdf</groupId>
     <artifactId>io</artifactId>
+    <version>7.2.5</version>
+</dependency>
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>layout</artifactId>
     <version>7.2.5</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
