--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+  server.port=8081
+  
   ################### DataSource Configuration ##########################  
 spring.datasource.url=jdbc:postgresql://gmdvcmdcartdev1.lyon-dev2.local:5432/cmdecarte_db
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,17 +9,3 @@ spring.datasource.password=UGzP6uCZm7di8%
 ################### Hibernate Configuration ##########################
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-################### Flyway Configuration ##########################
-#flyway.baselineOnMigrate=
-#flyway.baselineOnMigrate=true
-#flyway.schemas='cmdecarte'
-#flyway.url=jdbc:postgresql://gmdvcmdcartdev1.lyon-dev2.local:5432/cmdecarte_db
-
-
-
-
-
-
-
-
