--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: '17'
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn clean compile --batch-mode --no-transfer-progress -Dsilent=true
