--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,5 +44,5 @@ jobs:
         env:
           GITHUB_TOKEN: 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  # Needed to get PR information, if any
           SONAR_TOKEN: 870d8fb43847f0e39299fead034cb626f4f3fa9d
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=school-by-hiit_portail-suivi-formation-2022 -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=school-by-hiit
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Youssefh71_cartes1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=youssefh71
 
