--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,6 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: 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  # Needed to get PR information, if any
-          SONAR_TOKEN: 870d8fb43847f0e39299fead034cb626f4f3fa9d
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Youssefh71_cartes1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=youssefh71
 
