--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
           with:
             # Disabling shallow clone is recommended for improving relevancy of reporting
             fetch-depth: 0
+        - name: SonarQube Scan
+          uses: sonarsource/sonarqube-scan-action@master
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         - name: SonarQube Quality Gate check
           uses: sonarsource/sonarqube-quality-gate-action@master
           # Force to fail step after specific time
