--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.organization=youssefh71
 sonar.projectKey=Youssefh71_cartes1
 sonar.sources=src/main/java
-sonar.java.binaries=
+sonar.java.binaries=**/target/classes 
