--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.organization=youssefh71
 sonar.projectKey=Youssefh71_cartes1
 sonar.sources=C:\Program Files\Java\jdk-17
-#sonar.java.binaries=target
+sonar.java.binaries=**/*.java
