--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn clean package --batch-mode --no-transfer-progress -Dsilent=true
+        run: mvn clean verify --batch-mode --no-transfer-progress -Dsilent=true
 
 
   sonar:
